08/29/2008 David Teller <David.Teller@univ-orleans.fr>:
	* *: created