@@ -1,5 +1,5 @@
 (*
- * Batlib.Text - Text stuff, including parsing and printing
+ * Batlib_math - Numbers, operations and other mathematics
  * Copyright (C) 2008 David Teller
  * 
  * This library is free software; you can redistribute it and/or
@@ -18,26 +18,13 @@
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *)
 
-(**
-   Everything text related, from characters to parsing and printing.
+(** Numbers, operations and other mathematics.*)
 
-   {b Note} Unicode-related operations will fall into this module.
-*)
-
-(** {1 Characters}*)
-module Char            = Batlib_Baselib_Char
-module String          = Batlib_Extlib_String (*formerly Batlib_Baselib_String*)
-module StringLabels    = Batlib_Baselib_StringLabels
-
-(** {1 Parsing} *)
-module Genlex          = Batlib_Baselib_Genlex
-module Lexing          = Batlib_Baselib_Lexing
-module Parsing         = Batlib_Baselib_Parsing
-module Scanf           = Batlib_Baselib_Scanf
-module Str             = Batlib_Baselib_Str
-
-(** {1 Printing}*)
-module Format          = Batlib_Baselib_Format
-module Printexc        = Batlib_Baselib_Printexc
-module Printf          = Batlib_Baselib_Printf
+(** {1 Numbers}*)
+module Big_int     = Batlib_Baselib_Big_int
+module Complex     = Batlib_Baselib_Complex
+module Int32       = Batlib_Baselib_Int32
+module Int64       = Batlib_Baselib_Int64
+module Nativeint   = Batlib_Baselib_Nativeint
+module Num         = Batlib_Baselib_Num
 
