@@ -1,5 +1,5 @@
 (*
- * Batlib_data - Base data
+ * Batlib_network - Network manipulation
  * Copyright (C) 2008 David Teller
  * 
  * This library is free software; you can redistribute it and/or
@@ -17,20 +17,3 @@
  * License along with this library; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *)
-
-(**
-   Base data (numbers, characters...)
-*)
-
-(** {1 Numbers}*)
-module Big_int     = Batlib_Baselib_Big_int
-module Complex     = Batlib_Baselib_Complex
-module Int32       = Batlib_Baselib_Int32
-module Int64       = Batlib_Baselib_Int64
-module Nativeint   = Batlib_Baselib_Nativeint
-module Num         = Batlib_Baselib_Num
-
-(** {1 Text}*)
-module Char        = Batlib_Baselib_Char
-module String      = Batlib_Extlib_String (*formerly Batlib_Baselib_String*)
-module StringLabels= Batlib_Baselib_StringLabels
